[package]
name = "yh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", default-features = false, features = ["std", "help", "derive", "usage"] }
confy = "0.5.1"
main_error = "0.1.2"
reqwest = { version = "0.11.23", default-features = false, features = ["deflate", "brotli", "gzip", "blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
